CMF 2.1.0-beta (unreleased)

  Bug Fixes

    - CMFDefault.File and CMFDefault.Image: Restored ZMI Cache tab which was
      lost in CMF 1.6.

    - CMFCore.DynamicType: Fixed behaviour regarding default view.
      DynamicType was making it impossible to use a Zope3-style
      default view for CMF content types.
      (http://www.zope.org/Collectors/CMF/459)


CMF 2.1.0-alpha2 (2006/11/23)

  New Features

    - WorkflowTool: Added the IConfigurableWorkflowTool interface.
      This change includes the new 'getDefaultChain' and 'listChainOverrides'
      methods and an improved 'setChainForPortalTypes' method. The import
      handler now supports the 'remove' attribute for removing overrides.
      (http://www.zope.org/Collectors/CMF/457)

    - CMFCore.CachingPolicyManager: Implemented the old OFS.Cache.CacheManager
      API. Now objects other than CMF content or CMF templates can have their
      caching headers set by the caching policy manager with the same 
      fine-grained control.
      (http://www.zope.org/Collectors/CMF/408)

    - testing: Added test layers for setting up ZCML.

    - CMFDefault formlib: Added zope.formlib support.
      This includes some CMF specific base classes and an 'EmailLine' field.

    - browser views: Added some zope.formlib based forms.

    - CMFDefault utils: Added 'checkEmailAddress' function.

    - Added CMFCore.FSRestMethod:  ReST equivalent of FSSTXMethod.

    - CMFCore.FSSTXMethod:  Modernized, added tests, made customization
      possible (now renders via ZPT by default, using 'main_template').

    - Portal: Added 'email_charset' property.

    - CMFDefault utils: Added 'makeEmail' function.

    - CMFDefault.Image and CMFDefault.File: Overridden index_html methods
      add Cache Policy Manager-awareness and thus bring these implementations
      in line with CMFCore.FSFile and CMFCore.FSImage
      (http://www.zope.org/Collectors/CMF/454)

  Bug Fixes
