@@ -15,10 +15,34 @@
 $Id$
 """
 
-from zope.interface import Interface
-
+from zope.interface import Interface, Attribute
+from zope.component.interfaces import IObjectEvent
 
 class IDCWorkflowDefinition(Interface):
 
     """Web-configurable workflow definition.
     """
+
+class ITransitionEvent(Interface):
+    
+    """An event that's fired upon a workflow transition.
+    """
+    
+    workflow = Attribute(u"The workflow definition triggering the transition")
+    old_state = Attribute(u"The state definition of the workflow state before the transition")
+    new_state = Attribute(u"The state definition of the workflow state before after transition")
+    transition = Attribute(u"The transition definition taking place. "
+                            "May be None if this is the 'transition' to the initial state.")                                   
+    status = Attribute(u"The history/status dict of the object before the transition.")
+    kwargs = Attribute(u"Any keyword arguments passed to doActionFor() when the transition was invoked")
+    
+class IBeforeTransitionEvent(ITransitionEvent):
+    
+    """An event fired before a workflow transition.
+    """
+    
+class IAfterTransitionEvent(ITransitionEvent):
+    
+    """An event that's fired after a workflow transition.
+    """
+    
